--- a/_includes/1.0/api/salesorder.html
+++ b/_includes/1.0/api/salesorder.html
@@ -1,11 +1,11 @@
 <div id="salesorder" class="group">
 
-    <h2>Sales Order</h2>
+    <h2>Sales Orders</h2>
     {% highlight bash %}
     Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.sales_orders.url}}
     {% endhighlight %}
     <h3 id="salesorderjsonformat">JSON Format</h3>
-    <p>Sales order are represented as JSON objects which have the following keys:</p>
+    <p>Sales orders are represented as JSON objects which have the following keys:</p>
 
 
     <table class="table table-bordered table-striped">
