--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -1,11 +1,11 @@
 <div id="invoice" class="group">
 
-    <h2>Invoice</h2>
+    <h2>Invoices</h2>
     {% highlight bash %}
     Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.invoices.url}}
     {% endhighlight %}
     <h3 id="invoicejsonformat">JSON Format</h3>
-    <p>Invoice are represented as JSON objects which have the following keys:</p>
+    <p>Invoices are represented as JSON objects which have the following keys:</p>
 
 
     <table class="table table-bordered table-striped">
