replacing myERP by OneUp

--- a/_includes/1.0/api/nestedelements.html
+++ b/_includes/1.0/api/nestedelements.html
@@ -1,7 +1,7 @@
 <div id="nestedelements">
     <div id="address" class="group">
         <h2>Address</h2>
-        <p>In myERP, addresses are used at several places. Accounts, Suppliers, Contacts... So, in the API, addresses are embeded into their own JSON format, and follow the same rules everywhere.</p>
+        <p>In OneUp, addresses are used at several places. Accounts, Suppliers, Contacts... So, in the API, addresses are embeded into their own JSON format, and follow the same rules everywhere.</p>
         <h3>JSON Format</h3>
         <p>Addresses are represented as JSON objects which have the following keys:</p>
 
