--- a/_includes/1.0/libraries/java.html
+++ b/_includes/1.0/libraries/java.html
@@ -1,11 +1,11 @@
 <div id="java" class="group">
 
-<h3>Java: myERP API wrapper</h3>
+<h3>Java: OneUp API wrapper</h3>
 
-<p>The JAVA client library for myERP's API.</p>
+<p>The JAVA client library for OneUp's API.</p>
 
 <p>
-    <a href="https://github.com/myERP/myerp-java-api-client" target="_blank" class="btn btn-success">View library</a>
+    <a href="https://github.com/OneUp/oneup-java-api-client" target="_blank" class="btn btn-success">View library</a>
     <span class="official">Official</span>
 </p>
 
