--- a/_includes/1.0/libraries/php.html
+++ b/_includes/1.0/libraries/php.html
@@ -1,11 +1,11 @@
 <div id="php" class="group">
 
-<h3>PHP: myERP API wrapper</h3>
+<h3>PHP: OneUp API wrapper</h3>
 
-<p>The official PHP client library for myERP's API.</p>
+<p>The official PHP client library for OneUp's API.</p>
 
 <p>
-    <a href="https://github.com/myERP/myerp-php-api-client" target="_blank" class="btn btn-success">View library</a>
+    <a href="https://github.com/OneUp/oneup-php-api-client" target="_blank" class="btn btn-success">View library</a>
     <span class="official">Official</span>
 </p>
 
