--- a/_includes/1.0/libraries/ruby.html
+++ b/_includes/1.0/libraries/ruby.html
@@ -1,11 +1,11 @@
 <div class="group">
 
-<h3>Ruby: myERP API gem</h3>
+<h3>Ruby: OneUp API gem</h3>
 
-<p>The myERP API gem.</p>
+<p>The OneUp API gem.</p>
 
 <p>
-    <a href="https://github.com/myERP/myerp-ruby-api-client" target="_blank" class="btn btn-success">View library</a>
+    <a href="https://github.com/OneUp/oneup-ruby-api-client" target="_blank" class="btn btn-success">View library</a>
     <span class="official">Official</span>
 </p>
 
