--- a/_includes/1.0/overview/bulkdeletion.html
+++ b/_includes/1.0/overview/bulkdeletion.html
@@ -2,7 +2,7 @@
 
     <h2>Bulk Deletion</h2>
 
-    <p>If you make a lot of API requests in a short amount of time, you may bump into the myERP rate limit for requests. When you reach the limit, myERP stops processing any more requests until a certain amount of time has passed.
+    <p>If you make a lot of API requests in a short amount of time, you may bump into the OneUp rate limit for requests. When you reach the limit, OneUp stops processing any more requests until a certain amount of time has passed.
     </p>
     <p>We provide you a bulk deletion method for each resource. You can delete up to <b>{{site.api.bulk_deletion_limit}} elements</b> at the time by passing a comma-separated list of ids in the query string. The <b>ids</b> parameter accepts only integers separated by commas. If this parameter is missing or contains any wrong characters, you will get a <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html#sec10.4.1" target="_blank" title="400">400</a>.
     </p>
