--- a/_includes/1.0/overview/changepolicy.html
+++ b/_includes/1.0/overview/changepolicy.html
@@ -2,8 +2,8 @@
 
     <h2>Change Policy</h2>
 
-    <p>myERP may modify the attributes and resources available to the API and our policies related to access and use of the API from time to time without advance notice. myERP will use commercially reasonable efforts to notify you of any modifications to the API or policies through notifications or posts on the Developer Website. myERP also tracks deprecation of attributes of the API on its Changes Roadmap.
-        <br />Modification of the API may have an adverse effect on myERP Applications, including but not limited to changing the manner in which myERP Applications communicate with the API and display or transmit Your Data. myERP will not be liable to you or any third party for such modifications or any adverse effects resulting from such modifications.
+    <p>OneUp may modify the attributes and resources available to the API and our policies related to access and use of the API from time to time without advance notice. OneUp will use commercially reasonable efforts to notify you of any modifications to the API or policies through notifications or posts on the Developer Website. OneUp also tracks deprecation of attributes of the API on its Changes Roadmap.
+        <br />Modification of the API may have an adverse effect on OneUp Applications, including but not limited to changing the manner in which OneUp Applications communicate with the API and display or transmit Your Data. OneUp will not be liable to you or any third party for such modifications or any adverse effects resulting from such modifications.
     </p>
 
 </div>
