--- a/_includes/1.0/overview/errorcode.html
+++ b/_includes/1.0/overview/errorcode.html
@@ -8,7 +8,7 @@
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
-      <th>myERP Code</th>
+      <th>OneUp Code</th>
       <th>HTTP Status Code</th>
       <th>Message</th>
     </tr>
@@ -17,7 +17,7 @@
     <tr>
       <td>0</td>
       <td><a href="https://tools.ietf.org/html/rfc2616#section-10.5.1" target="_blank">500</a> </td>
-      <td>Oops something went wrong. Please contact us so the MyERP team can investigate.</td>
+      <td>Oops something went wrong. Please contact us so the OneUp team can investigate.</td>
     </tr>
     <tr>
       <td>1</td>
