--- a/_includes/1.0/overview/security.html
+++ b/_includes/1.0/overview/security.html
@@ -17,6 +17,6 @@ curl {{ site.api.base_url }}{{ site.api.v1}}.. {{site.api.auth_pattern}}
 
 Example:
 {% highlight bash %}
-curl {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}} -u "api_12_e3ab@api.myerp.com:34a352e421d03a4qXqc91f9b48ed7eb02e5"
+curl {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}} -u "api_12_e3ab@api.oneup.com:34a352e421d03a4qXqc91f9b48ed7eb02e5"
 {% endhighlight %}
 </div>
