--- a/_includes/1.0/overview/support.html
+++ b/_includes/1.0/overview/support.html
@@ -7,15 +7,15 @@
 
 <h3> API Documentation</h3>
 
-The official myERP documentation can be found on developers.myerp.com.
+The official OneUp documentation can be found on developers.oneup.com.
 
 
 <h3> Stackoverflow </h3>
 
-We encourage you to use it as it tend to provide rapide and good quality answers. The myERP core team also tries to participate.
+We encourage you to use it as it tend to provide rapide and good quality answers. The OneUp core team also tries to participate.
 
 <h3> Email </h3>
 
-The last line of defense. If you have exhausted the above list of resources and feel confident your needs cannot be met there, is to use this support email: <a href="mailto:support@myerp.com" title="">support@myerp.com</a> and provide as much detail as possible.
+The last line of defense. If you have exhausted the above list of resources and feel confident your needs cannot be met there, is to use this support email: <a href="mailto:support@oneup.com" title="">support@oneup.com</a> and provide as much detail as possible.
 
 </div>
