--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,13 @@
         <!--Nav Bar -->
         <nav class="bs-docs-sidebar" role="navigation">
             <a class="logo" href="/">
-                <img src="https://d2wni7o1grq1fg.cloudfront.net/201307030346/resources/images/common/myerp_logo_black.png" alt="myERP" />Developers
+                <img src="https://d2wni7o1grq1fg.cloudfront.net/201307030346/resources/images/common/myerp_logo_black.png" alt="OneUp" />Developers
             </a>
             <ul id="sidebar" class="nav nav-stacked fixed">
                 {% include side-menu.html %}
             </ul>
             <div class="love">Made with ♥
-                <br />by the myERP Team</div>
+                <br />by the OneUp Team</div>
         </nav>
         <!--Main Content -->
         <div class="page-content-wrapper">
