--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>myERP Developers {{ page.title }}</title>
+<title>OneUp Developers {{ page.title }}</title>
 <meta name="viewport" content="width=device-width">
 
 <!-- syntax highlighting CSS -->
