use another logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
         <!--Nav Bar -->
         <nav class="bs-docs-sidebar" role="navigation">
             <a class="logo" href="/">
-                <img src="https://d2wni7o1grq1fg.cloudfront.net/static/images/common/oneup_logo.svg" alt="OneUp" />Developers
+                <img src="//d2wni7o1grq1fg.cloudfront.net/static/images/oneup/logo.svg" alt="OneUp" />Developers
             </a>
             <ul id="sidebar" class="nav nav-stacked fixed">
                 {% include side-menu.html %}
