Add bank accounts to the documentation.

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -144,6 +144,18 @@
                 </li>
             </ul>
         </li>
+        <!-- bank accounts -->
+        <li>
+            <a href="#bankaccount">Bank Accounts</a>
+            <ul class="nav nav-stacked">
+                <li><a href="#bankaccountjsonformat">JSON Format</a>
+                </li>
+                <li><a href="#bankaccountjsonexample">JSON Example</a>
+                </li>
+                <li><a href="#bankaccountavailablemethods">Available Methods</a>
+                </li>
+            </ul>
+        </li>
         <!-- bank entries -->
         <li>
             <a href="#bankentry">Bank Entries</a>
