Add external_id field to accounting transactions API.

--- a/_includes/1.0/api/transaction.html
+++ b/_includes/1.0/api/transaction.html
@@ -18,6 +18,13 @@
                 <td>Automatically assigned when creating Transactions</td>
             </tr>
             <tr>
+                <td>external_id</td>
+                <td>{{ site.format.type.string }}</td>
+                <td>no</td>
+                <td>yes</td>
+                <td>Use primilary for Sync.<br /></td>
+            </tr>
+            <tr>
                 <td>transaction_code</td>
                 <td>{{ site.format.type.integer }}</td>
                 <td>no</td>
