add journals section

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -144,6 +144,18 @@
                 </li>
             </ul>
         </li>
+        <!-- journals -->
+        <li>
+            <a href="#journal">Accounting Journals</a>
+            <ul class="nav nav-stacked">
+                <li><a href="#journaljsonformat">JSON Format</a>
+                </li>
+                <li><a href="#journaljsonexample">JSON Example</a>
+                </li>
+                <li><a href="#journalavailablemethods">Available Methods</a>
+                </li>
+            </ul>
+        </li>
         <!-- bank accounts -->
         <li>
             <a href="#bankaccount">Bank Accounts</a>
