--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,41 +6,47 @@
 </head>
 
 <body>
-    <img src="/img/beta.gif" class="ribbon" alt="beta" />
-    <div id="wrapper">
-        <!--Nav Bar -->
-        <nav class="bs-docs-sidebar" role="navigation">
-            <a class="logo" href="/">
-                <img src="//d2wni7o1grq1fg.cloudfront.net/static/images/oneup/logo.svg" alt="OneUp" />Developers
-            </a>
-            <ul id="sidebar" class="nav nav-stacked fixed">
-                {% include side-menu.html %}
+  <header class="header" role="banner">
+    <div class="v2-wrapper">
+      <a class="logo" href="/">
+        <img src="//d2wni7o1grq1fg.cloudfront.net/static/images/oneup/logo.svg" alt="OneUp" />Developers
+      </a>
+      <nav class="siteHeader-nav nav-responsive naver"><span class="naver-handle"></span>
+        <div class="naver-wrapper">
+          <div class="naver-container">
+            <ul>
+              <li><a href="/">Getting Started</a></li>
+              <li><a href="/docs/1.0/api/">REST API</a></li>
+              <li><a href="https://support.oneup.com">Support</a></li>
             </ul>
-            <div class="love">Made with ♥
-                <br />by the OneUp Team</div>
-        </nav>
-        <!--Main Content -->
-        <div class="page-content-wrapper">
-            <div class="container-fluid">
-                {{ content }}
-            </div>
+          </div>
         </div>
-        <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+      </nav>
+    </div>
+  </header>
 
-        ga('create', 'UA-19359313-18', 'auto');
-        ga('send', 'pageview');
-        </script>
+  <!-- <img src="/img/beta.gif" class="ribbon" alt="beta" /> -->
+  <div class="v2-wrapper">
+    <div class="layout-sidebar">
+      {{ content }}
+    </div>
+  </div>
+  <script>
+      (function(i, s, o, g, r, a, m) {
+          i['GoogleAnalyticsObject'] = r;
+          i[r] = i[r] || function() {
+              (i[r].q = i[r].q || []).push(arguments)
+          }, i[r].l = 1 * new Date();
+          a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0];
+          a.async = 1;
+          a.src = g;
+          m.parentNode.insertBefore(a, m)
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+      ga('create', 'UA-19359313-18', 'auto');
+      ga('send', 'pageview');
+  </script>
 </body>
 
 </html>
