--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,18 +9,15 @@
   <header class="header" role="banner">
     <div class="v2-wrapper">
       <a class="logo" href="/">
-        <img src="//d2wni7o1grq1fg.cloudfront.net/static/images/oneup/logo.svg" alt="OneUp" />Developers
+        <img src="//d2wni7o1grq1fg.cloudfront.net/static/images/oneup/logo.svg" alt="OneUp" />
+        <span>Developers</span>
       </a>
-      <nav class="siteHeader-nav nav-responsive naver"><span class="naver-handle"></span>
-        <div class="naver-wrapper">
-          <div class="naver-container">
-            <ul>
-              <li><a href="/">Getting Started</a></li>
-              <li><a href="/docs/1.0/api/">REST API</a></li>
-              <li><a href="https://support.oneup.com">Support</a></li>
-            </ul>
-          </div>
-        </div>
+      <nav class="header-nav">
+        <ul>
+          <li><a href="/">Getting Started</a></li>
+          <li><a href="/docs/1.0/api/">REST API</a></li>
+          <li><a href="https://support.oneup.com">Support</a></li>
+        </ul>
       </nav>
     </div>
   </header>
