fix side nav bar

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,25 +9,25 @@
 <script type="text/javascript" src="//code.jquery.com/jquery-2.0.2.js"></script>
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="//cdn.rawgit.com/Dogfalo/materialize/master/js/scrollspy.js"></script>
+<!-- <script type="text/javascript" src="//cdn.rawgit.com/Dogfalo/materialize/master/js/scrollspy.js"></script> -->
 
 <link rel="stylesheet" href="/css/main.css">
 
 <script type="text/javascript">
 //<![CDATA[ 
 $(window).load(function() {
-    $('.sidebar-nav').affix({
+    $('.bs-docs-sidebar').affix({
         offset: {
             top: 0
         }
     });
 
-    // $('body').scrollspy({
-    //     target: '.side-nav'
-    // });
-    $(document).ready(function(){
-        $('.group').scrollSpy();
+    $('body').scrollspy({
+        target: '.bs-docs-sidebar'
     });
+    // $(document).ready(function(){
+    //     $('.group').scrollSpy();
+    // });
          
 
     $(function() {
