--- a/css/main.css
+++ b/css/main.css
@@ -99,12 +99,12 @@ body {
     margin-right: -15px;
 }
 
-.layout-sidebar .sidebar {
+.layout-sidebar .bs-docs-sidebar  {
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
-    position: relative;
-    float: left;
+    position: fixed;
+    margin-top: 115px;
     width: 20.83333%;
 }
 
@@ -116,57 +116,119 @@ body {
     min-height: 1000px;
     float: left;
     width: 75%;
+    margin-left: 23%;
 }
-
 
 /*
 
     SIDEBAR
 
 */
-.sidebar-nav {
-    margin-top: 115px;
-    max-height: 100%;
-    overflow-y: auto;  
+
+.bs-docs-sidebar li {
+    list-style-type: none;
 }
 
-.sidebar-nav li {
+.bs-docs-sidebar .nav>li {
+    margin: 0;
+}
+/* all links */
+
+.bs-docs-sidebar .nav>li>a:hover,
+.bs-docs-sidebar .nav>li>a:focus {
+    background: none;
+}
+.bs-docs-sidebar .nav>li>a {
+    border: none;
     color: #777;
+    padding: 0.6em 0 0.6em 0;
+    transition: all 250ms;
+    font-size: .85em;
 }
 
-.sidebar-nav li:not(.item-header):hover, .sidebar-nav a.active li {
+/* nested links */
+
+.bs-docs-sidebar .nav .nav > li > a {
+    border: none;
+    margin-left: 14px;
+}
+
+.bs-docs-sidebar .nav .nav > li > a > span {
+    text-transform: uppercase;
+    font-size: 60%;
+    color: #555;
+}
+/* nested nested links */
+
+.bs-docs-sidebar .nav .nav .nav > li > a {
+    border: none;
+    padding-left: 95px;
+    font-size: 12px;
+    font-style: italic;
+}
+/* active & hover links */
+/* nested active links */
+/* all active links */
+.bs-docs-sidebar .nav>.active>a, .bs-docs-sidebar .nav>li>a:hover, .bs-docs-sidebar .nav>li>a:focus,
+.bs-docs-sidebar .nav .nav>.active>a, .bs-docs-sidebar .nav .nav>.active:hover>a, .bs-docs-sidebar .nav .nav>.active:focus>a,
+.bs-docs-sidebar .nav>li>a.selected, .bs-docs-sidebar .nav>.active>a, .bs-docs-sidebar .nav>.active:hover>a, .bs-docs-sidebar .nav>.active:focus>a {
     border-left: 2px solid #2e90c8;
     color: #2e90c8;
     padding-left: 7px;
 }
-
-.sidebar-nav ul {
-    padding-left: 0;
+ 
+/* hide inactive nested list */
+.bs-docs-sidebar .nav ul.nav {
+    display: none;
 }
-.sidebar-nav li {
-    margin-bottom: 15px;
-    padding-bottom: 0;
-    padding-top: 0;
-}
-.sidebar-nav li {
-    font-size: .875em;
-    line-height: 1.25;
-    list-style-type: none;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    transition: all .15s;
-}
-.sidebar-nav ul ul {
-    padding-left: 1em;
+/* show active nested list */
+.bs-docs-sidebar .nav>.active>ul.nav {
+    display: block;
 }
 
-.sidebar-nav li.item-header{
-    color: #49505b;
-    font-size: .875em;
+/* hide inactive nested nested list */
+.bs-docs-sidebar .nav .nav ul.nav {
+    display: none;
+}
+/* show active nested nested list */
+
+.bs-docs-sidebar .nav .nav>.active>ul.nav {
+    display: block;
+}
+
+.bs-docs-sidebar li.category > a:first-child {
+    color: #49505b !important;
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
+    display: block;
+    min-height: 34px;
+    line-height: 34px;
 }
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
