--- a/_includes/1.0/overview/general.html
+++ b/_includes/1.0/overview/general.html
@@ -1,12 +1,10 @@
 <div id="general" class="group">
 
-    <h3>Introduction</h3>
+    <h2>General</h2>
 
     <p>This is the documentation for the OneUp v1 API. Read the contents of this page carefully, including the authentication process and the rate &amp; limits described below, to understand how to be a good API citizen and to understand general restrictions and concerns.</p>
 
     <p>Your use and access to the API is expressly conditioned on your compliance with the policies, restrictions and other provisions related to the API set forth in our API Restrictions and Responsibilities and the other documentation we provide you. You must also comply with the restrictions set forth in the <a href="https://oneup.com/en/term-of-use-US.html" target="_blank" title="">OneUp Terms of Service</a> and the <a href="https://oneup.com/en/privacy-policy.html" title="" target="_blank">OneUp Privacy Policy</a>, in all uses of the API. If OneUp believes that you have or attempted to violate any term, condition or the spirit of these policies or agreements, your right to access and use the API may be temporarily or permanently revoked.</p>
-
-    <h2>Getting Started</h2>
 
     <h3>REST API</h3>
     <p>The API is implemented as JSON using all four verbs (GET/POST/PUT/DELETE). Each resource, like Customer, Item, or Order, has its own URL and is manipulated in isolation. In other words, we’ve tried to make the API follow the REST principles as much as possible.</p>
