--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     color: #555;
     background-color: #f8f8f9;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Helvetica Neue', Helvetica, sans-serif;
     min-width: 680px;
 }
 
@@ -270,9 +270,10 @@ a:active {
 pre {
     margin: 0;
 }
-section div.group {
+div.group {
     border-bottom: 1px solid #999;
     padding-bottom: 40px;
+    line-height: 24px;
 }
 section h2 {
     color: #2e90c8;
