--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -1,9 +1,7 @@
 <div id="invoice" class="group">
 
     <h2>Invoices</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.invoices.url}}
-    {% endhighlight %}
+    {% highlight bash %}Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.invoices.url}}{% endhighlight %}
     <h3 id="invoicejsonformat">JSON Format</h3>
     <p>Invoices are represented as JSON objects which have the following keys:</p>
 
@@ -210,7 +208,7 @@
 			
     <h3 id="invoicejsonexample">JSON Example</h3>
 	<p>That example describe a US invoice.</p>
-    {% highlight bash %} {% include 1.0/api/json/invoice.json %} {% endhighlight %}
+    {% highlight bash %}{% include 1.0/api/json/invoice.json %}{% endhighlight %}
 
     <h3 id="invoiceavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
