--- a/_includes/1.0/api/productservice.html
+++ b/_includes/1.0/api/productservice.html
@@ -1,9 +1,7 @@
 <div id="productservice" class="group">
 
     <h2>Products and Services</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.items.url}}
-    {% endhighlight %}
+    {% highlight bash %}Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.items.url}}{% endhighlight %}
     <h3 id="productservicejsonformat">JSON Format</h3>
     <p>Products and Services are represented as JSON objects which have the following keys:</p>
 
@@ -140,7 +138,7 @@
     </table>
 
     <h3 id="productservicejsonexample">JSON Example</h3>
-    {% highlight bash %} {% include 1.0/api/json/productservice.json %} {% endhighlight %}
+    {% highlight bash %}{% include 1.0/api/json/productservice.json %}{% endhighlight %}
 
     <h3 id="productserviceavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
