--- a/_includes/1.0/api/productservicefamily.html
+++ b/_includes/1.0/api/productservicefamily.html
@@ -1,9 +1,7 @@
 <div id="productservicefamily" class="group">
 
     <h2>Products and Services Families</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.item_families.url}}
-    {% endhighlight %}
+    {% highlight bash %}Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.item_families.url}}{% endhighlight %}
     <h3 id="productservicefamilyjsonformat">JSON Format</h3>
     <p>Products and Services Families are represented as JSON objects which have the following keys:</p>
 
@@ -38,7 +36,7 @@
     </table>
 
     <h3 id="productservicefamilyjsonexample">JSON Example</h3>
-    {% highlight bash %} {% include 1.0/api/json/productservicefamily.json %} {% endhighlight %}
+    {% highlight bash %}{% include 1.0/api/json/productservicefamily.json %}{% endhighlight %}
 
     <h3 id="productservicefamilyavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
