--- a/_includes/1.0/api/project.html
+++ b/_includes/1.0/api/project.html
@@ -1,9 +1,7 @@
 <div id="project" class="group">
 
     <h2>Projects</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.projects.url}}
-    {% endhighlight %}
+    {% highlight bash %}Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.projects.url}}{% endhighlight %}
     <h3 id="projectjsonformat">JSON Format</h3>
     <p>Projects are represented as JSON objects which have the following keys:</p>
 
@@ -37,7 +35,7 @@
     </table>
 
     <h3 id="projectjsonexample">JSON Example</h3>
-    {% highlight bash %} {% include 1.0/api/json/project.json %} {% endhighlight %}
+    {% highlight bash %}{% include 1.0/api/json/project.json %}{% endhighlight %}
 
     <h3 id="projectavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
