--- a/_includes/1.0/api/salesorder.html
+++ b/_includes/1.0/api/salesorder.html
@@ -1,9 +1,7 @@
 <div id="salesorder" class="group">
 
     <h2>Sales Orders</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.sales_orders.url}}
-    {% endhighlight %}
+    {% highlight bash %}Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.sales_orders.url}}{% endhighlight %}
     <h3 id="salesorderjsonformat">JSON Format</h3>
     <p>Sales orders are represented as JSON objects which have the following keys:</p>
 
@@ -199,7 +197,7 @@
 			
     <h3 id="salesorderjsonexample">JSON Example</h3>
 	<p>That example describe a US sales order.</p>
-    {% highlight bash %} {% include 1.0/api/json/salesorder.json %} {% endhighlight %}
+    {% highlight bash %}{% include 1.0/api/json/salesorder.json %}{% endhighlight %}
 
     <h3 id="salesorderavailablemethods">Available Methods</h3>
     {% include 1.0/api/methods/full.html %}
